Bug: Negative SVG rect rx,ry corner radii values aren't handled correctly https://bugs.webkit.org/show_bug.cgi?id=87859

Patch by Hans Muller <hmuller@adobe.com> on 2012-05-31
Reviewed by Dirk Schulze.

Source/WebCore:

Added the rect element corner radius constraints specified in steps 2-4 of
http://www.w3.org/TR/SVG/shapes.html#RectElement to Path::addRoundedRect().
Support for steps 6 and 7 was already included.  Steps 2-4:

2 - If neither rx nor ry are properly specified, then set both rx and ry to 0. (This will result in square corners.)
3 - Otherwise, if a properly specified value is provided for rx, but not for ry then set both rx and ry to the value of rx.
4 - Otherwise, if a properly specified value is provided for ry, but not for rx, then set both rx and ry to the value of ry.

Tests: svg/custom/rect-negative-corner-radii-expected.svg
       svg/custom/rect-negative-corner-radii.svg

* platform/graphics/Path.cpp:
(WebCore::Path::addRoundedRect):

LayoutTests:

Added a reftest which verifies that negative rect corner radius values are handled per the SVG spec,
http://www.w3.org/TR/SVG/shapes.html#RectElement.

* svg/custom/rect-negative-corner-radii-expected.svg: Added.
* svg/custom/rect-negative-corner-radii.svg: Added.

Canonical link: https://commits.webkit.org/105863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119182 268f45cc-cd09-0410-ab3c-d52691b4dbfc